[tool.poetry]
name = "idcs"
version = "0.1.0"
description = ""
authors = ["qriwty <arthur.social.rech@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
